--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: 3;p/>b
 description: Technical Blogs, Mostly on Java, Camel, Microservices ...
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
