Added mongo and nginx docs

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 3;p/>b
-description: Technical Blogs, Mostly on Java, Camel, Microservices ...
+description: Technical Blogs, Mostly on Java, Camel, Microservices, Docker, ...
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
