--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: 3;p/>b
 description: Technical Blogs, Mostly on Java, Apache Camel, Microservices, Docker, K8S...
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-minimal
+theme: jekyll-theme-midnight
