Set theme jekyll-theme-slate

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: 3;p/>b
 description: Trust your instinct .. not this blog..
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-midnight
+theme: jekyll-theme-slate
