--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 3;p/>b
-description: Technical Blogs, Mostly on Java, Apache Camel, Microservices, Docker, K8S...
+description: Trust your instinct .. not this blog..
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
