--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 3;p/>b
-description: Trust your instinct .. not this blog..
+title: {  3;p/>b  }
+description: Not for you, If you are not a { developer }
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
